--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
 	</properties>
 
 	<dependencies>
+		
+		<dependency>
+    		<groupId>com.mashape.unirest</groupId>
+    		<artifactId>unirest-java</artifactId>
+    		<version>1.4.9</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
@@ -54,6 +61,7 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>io.dropwizard</groupId>
