--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,24 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
 		</dependency>
-
-
+    	
+	   	<!-- https://mvnrepository.com/artifact/uk.ac.cam.ch.opsin/opsin -->
+		<dependency>
+    		<groupId>uk.ac.cam.ch.opsin</groupId>
+    		<artifactId>opsin-core</artifactId>
+    		<version>2.5.0</version>
+    		<type>pom</type>
+		</dependency>
+		
+		<dependency>
+    		<groupId>uk.ac.cam.ch.opsin</groupId>
+    		<artifactId>opsin-inchi</artifactId>
+    		<version>2.5.0</version>
+    		<type>pom</type>
+		</dependency>
+		
+    	
+    	
 		<dependency>
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-core</artifactId>
