--- a/pom.xml
+++ b/pom.xml
@@ -173,14 +173,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.openscience.cdk</groupId>
-			<artifactId>cdk-bundle</artifactId>
-			<version>2.0</version>
+			<groupId>cdk</groupId>
+			<artifactId>cdk</artifactId>
+			<version>2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>cdk</groupId>
 			<artifactId>JChemPaint</artifactId>
-			<version>3.4</version>
+			<version>3.5</version>
 		</dependency>
 
 		<dependency>
