--- a/pom.xml
+++ b/pom.xml
@@ -187,9 +187,16 @@
             <groupId>org.openscience.cdk</groupId>
             <artifactId>cdk-bundle</artifactId>
             <version>2.7.1</version>
+        
+            <exclusions>
+        		<exclusion>
+            	<groupId>xml-apis</groupId>
+            	<artifactId>xml-apis</artifactId>
+        		</exclusion>
+    		</exclusions>		
         </dependency>
 		-->
-		
+					
 		<dependency>
 			<groupId>cdk</groupId>
 			<artifactId>JChemPaint</artifactId>
