--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<openhtml.version>0.0.1-RC11</openhtml.version>
 		<dropwizard.version>1.3.9</dropwizard.version>
 		<poi.version>5.2.3</poi.version>
-		<log4j.version>2.19.0</log4j.version>
+		<log4j.version>2.23.1</log4j.version>
 		<indigo.version>1.3.0beta.r354</indigo.version>
 		<skipTests>true</skipTests>
 	</properties>
@@ -67,18 +67,17 @@
 		<dependency>
     		<groupId>uk.ac.cam.ch.opsin</groupId>
     		<artifactId>opsin-core</artifactId>
-    		<version>2.5.0</version>
+    		<version>2.8.0</version>
     		<type>pom</type>
 		</dependency>
 		
 		<dependency>
     		<groupId>uk.ac.cam.ch.opsin</groupId>
     		<artifactId>opsin-inchi</artifactId>
-    		<version>2.5.0</version>
+    		<version>2.8.0</version>
     		<type>pom</type>
 		</dependency>
-		
-    	
+		    	
     	
 		<dependency>
 			<groupId>io.dropwizard</groupId>
@@ -140,17 +139,27 @@
 				<version>1.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>${log4j.version}</version>
+    		<groupId>org.apache.logging.log4j</groupId>
+    		<artifactId>log4j-core</artifactId>
+    		<version>${log4j.version}</version>
 		</dependency>
+		
+		<dependency>
+    	    <groupId>org.apache.logging.log4j</groupId>
+	        <artifactId>log4j-api</artifactId>
+    	    <version>${log4j.version}</version>
+    	</dependency>
 
+		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
 			<version>1.6</version>
 		</dependency>
+		
+		
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
