--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,34 @@
 	</properties>
 
 	<dependencies>
+	
+	
+	
+	<!-- must be 5.1.49 for DSSTox per Galen Spikes -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.49</version>
+		</dependency>
+		
+		
+		<!-- Fix vulnerability: https://mvnrepository.com/artifact/com.mysql/mysql-connector-j  
+		<dependency>
+    		<groupId>com.mysql</groupId>
+    		<artifactId>mysql-connector-j</artifactId>
+    		<version>8.2.0</version>
+		</dependency>
+		-->
+	
+	
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+    		<groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>42.7.5</version>
+		</dependency>
+
+	
 		
 		<dependency>
     		<groupId>com.mashape.unirest</groupId>
