Changed to use IAtomContainer and fix in the similarity calculation used in TaskCalculations for finding analogs in training and test sets

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,15 @@ test downloadable HCD/
 *.bat
 MNDOH/
 *.xls
+Java jdk/
+reports/bob.html
+reports/
+tony/
+*.sql
+*.sqbpro
+SCDCD/
+*.json
+output.tsv
+output.txt
+smiles.csv
+Smiles.smi
