--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.5.4</version>
+	</parent>
+
+
 	<groupId>gov.epa</groupId>
 	<artifactId>webtest</artifactId>
 	<version>1.0-SNAPSHOT</version>
@@ -18,57 +28,66 @@
 	<properties>
 		<project.build.sourceEncoding>iso-8859-1</project.build.sourceEncoding>
 		<maven.compiler.release>17</maven.compiler.release>
-	
-		<mainClass>gov.epa.WebTESTApplication</mainClass>
+
+		<!--<mainClass>gov.epa.WebTESTApplication</mainClass>-->
+		<mainClass>gov.epa.test.api.predict.PredictApplication</mainClass>
+
 		<openhtml.version>0.0.1-RC11</openhtml.version>
-		<dropwizard.version>1.3.9</dropwizard.version>
+		<dropwizard.version>4.0.15</dropwizard.version>
 		<poi.version>5.2.3</poi.version>
 		<log4j.version>2.23.1</log4j.version>
-		<indigo.version>1.3.0beta.r354</indigo.version>
+		<!--<indigo.version>1.3.0beta.r354</indigo.version>-->
+		<indigo.version>1.30.1</indigo.version>
 		<skipTests>true</skipTests>
 	</properties>
 
 	<dependencies>
-	
-	
-	
-	<!-- must be 5.1.49 for DSSTox per Galen Spikes -->
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+
+		<!-- must be 5.1.49 for DSSTox per Galen Spikes -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.49</version>
 		</dependency>
-		
-		
-		<!-- Fix vulnerability: https://mvnrepository.com/artifact/com.mysql/mysql-connector-j  
+
+
+		<!-- Fix vulnerability:
+		https://mvnrepository.com/artifact/com.mysql/mysql-connector-j  
 		<dependency>
     		<groupId>com.mysql</groupId>
     		<artifactId>mysql-connector-j</artifactId>
     		<version>8.2.0</version>
 		</dependency>
 		-->
-	
-	
+
+
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
-    		<groupId>org.postgresql</groupId>
-    		<artifactId>postgresql</artifactId>
-    		<version>42.7.5</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.5</version>
 		</dependency>
 
-	
-		
+
 		<dependency>
-    		<groupId>com.mashape.unirest</groupId>
-    		<artifactId>unirest-java</artifactId>
-    		<version>1.4.9</version>
+			<groupId>com.mashape.unirest</groupId>
+			<artifactId>unirest-java</artifactId>
+			<version>1.4.9</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.36.0.3</version>
+			<version>3.50.3.0</version>
 		</dependency>
+
 		<!-- apache poi for xls, doc etc reading/writing -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -90,46 +109,68 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
 		</dependency>
-    	
-	   	<!-- https://mvnrepository.com/artifact/uk.ac.cam.ch.opsin/opsin -->
+
+		<!-- https://mvnrepository.com/artifact/uk.ac.cam.ch.opsin/opsin -->
 		<dependency>
-    		<groupId>uk.ac.cam.ch.opsin</groupId>
-    		<artifactId>opsin-core</artifactId>
-    		<version>2.8.0</version>
-    		<type>pom</type>
+			<groupId>uk.ac.cam.ch.opsin</groupId>
+			<artifactId>opsin-core</artifactId>
+			<version>2.8.0</version>
+			<type>pom</type>
 		</dependency>
-		
+
 		<dependency>
-    		<groupId>uk.ac.cam.ch.opsin</groupId>
-    		<artifactId>opsin-inchi</artifactId>
-    		<version>2.8.0</version>
-    		<type>pom</type>
+			<groupId>uk.ac.cam.ch.opsin</groupId>
+			<artifactId>opsin-inchi</artifactId>
+			<version>2.8.0</version>
+			<type>pom</type>
 		</dependency>
-		    	
-    	
+
+
 		<dependency>
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-core</artifactId>
 			<version>${dropwizard.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-client</artifactId>
 			<version>${dropwizard.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-configuration</artifactId>
+			<version>${dropwizard.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.smoketurner</groupId>
 			<artifactId>dropwizard-swagger</artifactId>
-			<version>${dropwizard.version}-1</version>
+			<version>4.0.5-1</version>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/edu.stanford.ejalbert/BrowserLauncher2 -->
+
 		<dependency>
-    		<groupId>BrowserLauncher</groupId>
-    		<artifactId>BrowserLauncher</artifactId>
-    		<version>2.1.3</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.19.2</version>
 		</dependency>
-		
+
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+		<!--
+		https://mvnrepository.com/artifact/edu.stanford.ejalbert/BrowserLauncher2 -->
+		<dependency>
+			<groupId>BrowserLauncher</groupId>
+			<artifactId>BrowserLauncher</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+
 		<dependency>
 			<groupId>weka</groupId>
 			<artifactId>weka</artifactId>
@@ -150,6 +191,7 @@
 			<artifactId>cesar-datatype</artifactId>
 			<version>1.0.0.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>gov.epa.webtest</groupId>
 			<artifactId>Datasets</artifactId>
@@ -158,52 +200,80 @@
 		<dependency>
 			<groupId>gov.epa.webtest</groupId>
 			<artifactId>SystemData</artifactId>
+			<!--<version>1.3</version>-->
 			<version>1.2</version>
 		</dependency>
-		
+
 		<dependency>
-				<groupId>gov.epa.webtest</groupId>
-				<artifactId>DataSets_LDA</artifactId>
-				<version>1.0</version>
+			<groupId>gov.epa.webtest</groupId>
+			<artifactId>DataSets_LDA</artifactId>
+			<version>1.0</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
-    		<groupId>org.apache.logging.log4j</groupId>
-    		<artifactId>log4j-core</artifactId>
-    		<version>${log4j.version}</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
-		
-		<dependency>
-    	    <groupId>org.apache.logging.log4j</groupId>
-	        <artifactId>log4j-api</artifactId>
-    	    <version>${log4j.version}</version>
-    	</dependency>
 
-		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.1.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>1.6.16</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.18.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
-			<version>1.6</version>
+			<version>1.9.0</version> <!-- Use the latest stable version -->
 		</dependency>
-		
-		
+
+
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>1.4</version>
+			<version>1.9.0</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>com.openhtmltopdf</groupId>
 			<artifactId>openhtmltopdf-core</artifactId>
 			<version>${openhtml.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.openhtmltopdf</groupId>
 			<artifactId>openhtmltopdf-pdfbox</artifactId>
 			<version>${openhtml.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>net.sf.jtidy</groupId>
 			<artifactId>jtidy</artifactId>
@@ -211,29 +281,40 @@
 		</dependency>
 
 
-		
 		<dependency>
 			<groupId>cdk</groupId>
 			<artifactId>cdk</artifactId>
 			<version>2.1</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		
-		
-		<!--
+
+
+		<!-- TODO Latest CDK probably not 100% compatible with JChemPaint- check if it's just the toolbar buttons
 		<dependency>
-            <groupId>org.openscience.cdk</groupId>
-            <artifactId>cdk-bundle</artifactId>
-            <version>2.7.1</version>
-        
-            <exclusions>
-        		<exclusion>
-            	<groupId>xml-apis</groupId>
-            	<artifactId>xml-apis</artifactId>
-        		</exclusion>
-    		</exclusions>		
-        </dependency>
+			<groupId>org.openscience.cdk</groupId>
+			<artifactId>cdk-bundle</artifactId>
+			<version>2.7.1</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>xml-apis</groupId>
+					<artifactId>xml-apis</artifactId>
+				</exclusion>
+				<exclusion>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</exclusion>
+			</exclusions>
+		</dependency>
 		-->
-					
+
+
 		<dependency>
 			<groupId>cdk</groupId>
 			<artifactId>JChemPaint</artifactId>
@@ -247,11 +328,22 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--
 		<dependency>
 			<groupId>com.mashape.unirest</groupId>
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
 		</dependency>
+		-->
+
+		<!-- https://mvnrepository.com/artifact/com.konghq/unirest-java-core -->
+		<dependency>
+			<groupId>com.konghq</groupId>
+			<artifactId>unirest-java-core</artifactId>
+			<version>4.5.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.epam.indigo</groupId>
@@ -279,7 +371,9 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		
 		<plugins>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
@@ -289,10 +383,14 @@
 					<downloadJavadocs>false</downloadJavadocs>
 				</configuration>
 			</plugin>
+			
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
+
+				<!--<version>3.6.1</version>-->
+
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
@@ -301,20 +399,30 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.0.0</version>
+
+				<!--<version>3.0.0</version>-->
+
 				<executions>
 					<execution>
+						<!--<phase>package</phase>-->
+
+						<!--https://stackoverflow.com/questions/49215416/maven-shade-plugin-cannot-find-resource-in-class-org-apache-maven-plugins-sh  -->
+						<id>shade-jar-with-dependencies</id>
 						<phase>package</phase>
+
 						<goals>
 							<goal>shade</goal>
 						</goals>
 						<configuration>
 							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>${mainClass}</mainClass>
 								</transformer>
 							</transformers>
@@ -332,10 +440,12 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<!--<version>3.0.2</version>-->
 				<configuration>
 					<archive>
 						<manifest>
@@ -344,6 +454,8 @@
 					</archive>
 				</configuration>
 			</plugin>
+			
+			
 		</plugins>
 
 		<resources>
