--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -150,11 +150,13 @@
 			<version>4.0.5-1</version>
 		</dependency>
 
+		<!--
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.19.2</version>
 		</dependency>
+		-->
 
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
@@ -163,12 +165,11 @@
 			<version>2.0.1.Final</version>
 		</dependency>
 
-		<!--
-		https://mvnrepository.com/artifact/edu.stanford.ejalbert/BrowserLauncher2 -->
+		<!--https://mvnrepository.com/artifact/edu.stanford.ejalbert/BrowserLauncher2 -->
 		<dependency>
-			<groupId>BrowserLauncher</groupId>
-			<artifactId>BrowserLauncher</artifactId>
-			<version>2.1.3</version>
+			<groupId>edu.stanford.ejalbert</groupId>
+			<artifactId>BrowserLauncher2</artifactId>
+			<version>1.3</version>
 		</dependency>
 
 		<dependency>
@@ -176,6 +177,7 @@
 			<artifactId>weka</artifactId>
 			<version>1.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>cesar</groupId>
 			<artifactId>cesar-base</artifactId>
@@ -192,11 +194,13 @@
 			<version>1.0.0.2</version>
 		</dependency>
 
+
 		<dependency>
 			<groupId>gov.epa.webtest</groupId>
 			<artifactId>Datasets</artifactId>
 			<version>1.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>gov.epa.webtest</groupId>
 			<artifactId>SystemData</artifactId>
@@ -295,7 +299,8 @@
 		</dependency>
 
 
-		<!-- TODO Latest CDK probably not 100% compatible with JChemPaint- check if it's just the toolbar buttons
+		<!-- TODO Latest CDK probably not 100% compatible with JChemPaint- check
+		if it's just the toolbar buttons
 		<dependency>
 			<groupId>org.openscience.cdk</groupId>
 			<artifactId>cdk-bundle</artifactId>
